rust-auth0-service/yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-auth0-service
  namespace: auth0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-auth0-service
  template:
    metadata:
      labels:
        app: rust-auth0-service
    spec:
      containers:
      - name: rust-auth0-service
        image: docker.io/tororomeshi/rust_auth0_service@sha256:8eb5c06310ecb924e39c4884b155cee9ed46702fdfcd0c415719c9d414d2e024
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
