rust-auth0-service/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-auth0-service
  namespace: auth0
spec:
  # type: NodePort
  selector:
    app: rust-auth0-service
  ports:
    - protocol: TCP
      port: 8080          # 修正ポイント
      targetPort: 8080    # 修正ポイント
      # nodePort: 30080
