rust-auth0-service/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-auth0-ingress
  namespace: auth0
  annotations:
    ingressClassName: "cloudflare"  # 使用しているIngressコントローラに応じて変更
spec:
  rules:
  - host: auth.tororomeshi.net
    http:
      paths:
      - path: /auth/login
        pathType: Exact
        backend:
          service:
            name: rust-auth0-service
            port:
              number: 8080
      - path: /auth/google/callback
        pathType: Exact
        backend:
          service:
            name: rust-auth0-service
            port:
              number: 8080
      - path: /auth/handoffs/exchange
        pathType: Exact
        backend:
          service:
            name: rust-auth0-service
            port:
              number: 8080
      - path: /auth/logout
        pathType: Exact
        backend:
          service:
            name: rust-auth0-service
            port:
              number: 8080
